--- a/README.adoc
+++ b/README.adoc
@@ -27,9 +27,8 @@ I enjoy playing with golang and TUIs, so, why not? ;)
 
 .Really? Okay
 
-image::shot/shot-01.png[]
-
-image::shot/shot-02.png[]
+* image::shot/shot-01.png[]
+* image::shot/shot-02.png[]
 
 == Compile
 
