--- a/README.adoc
+++ b/README.adoc
@@ -11,14 +11,14 @@ I enjoy playing with golang and TUIs, so, why not? ;)
 
 == Prototype
 
-* `.yml` i/o
-** Separate menu for each operation
-** `input` menu for insertion
+* [ ] `.yml` i/o
+** [ ] Separate menu for each operation
+** [ ] `input` menu for insertion
 ** Basically create my-own CRUD system
 *** You think this will create something like `mongodb` later on? LMAO
-** Display menu
-* Toggle item
-** Extra attribute for `status`
+* [ ] Display menu
+* [ ] Toggle item
+** [ ] Extra attribute for `status`
 * Try not to make it resource heavy
 ** Yeah CLIs can also become resource heavy, don't believe me? Look at Python (just kidding, I meant JavaScript)
 *** Of course I'm kidding, you can try it some too ;)
